--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <title>Test</title>
-<link href="main.css" rel="stylesheet"></head>
+<link href="D:\repo\project\public\/main.css" rel="stylesheet"></head>
 <body>
 <div id="app"></div>
-<script type="text/javascript" src="bundle.js"></script></body>
+<script type="text/javascript" src="D:\repo\project\public\/vendor.js"></script><script type="text/javascript" src="D:\repo\project\public\/app.js"></script></body>
 </html>
